--- a/app/components/Footer.module.css
+++ b/app/components/Footer.module.css
@@ -1,6 +1,6 @@
 /* app/components/Footer.module.css */
 .footer {
-    background-color: #333;
+    background-color: rgb(0, 0, 0);
     color: white;
     padding: 20px 0;
     text-align: center;
@@ -11,11 +11,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-  }
-  
-  .logo img {
-    width: 150px;
-    margin-bottom: 20px;
+    padding: 0 3rem;
+    gap: 10px;
   }
   
   .socialLinks {
@@ -42,11 +39,12 @@
       flex-direction: row;
       justify-content: space-between;
     }
-  
-    .logo {
+
+   
+    /* .logo {
       margin-bottom: 0;
     }
-  
+   */
     .socialLinks {
       margin-bottom: 0;
     }
