--- a/app/components/Hero.module.css
+++ b/app/components/Hero.module.css
@@ -1,6 +1,5 @@
-/* Hero.module.css */
 .hero {
-    background-image: url('https://images.pexels.com/photos/1287083/pexels-photo-1287083.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); 
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(155, 155, 155, 0.5)), url('../../public/orangehijab.jpg');
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -14,24 +13,44 @@
 }
   
 .heroContent {
-    background: rgba(0, 0, 0, 0.5); /* Add a semi-transparent background to enhance readability */
-    padding: 20px;
-    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    padding: 0 20rem;
 }
-  
+
+.heroTitle {
+    font-size: 54px;
+    font-family: Playfair;
+    text-transform: capitalize;
+}
+
+.heroSubTitle {
+    font-size: 20px;
+    font-family: Montserrat;
+    font-weight: 400;
+}
+
 .button {
     margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #009879;
+    padding: 15px 25px;
+    background-color: #CE503F;
     color: #fff;
     border: none;
     cursor: pointer;
     font-size: 16px;
-    border-radius: 5px;
+    border-radius: 0 20px 0 0;
     text-transform: uppercase;
     transition: background-color 0.3s ease;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
   
 .button:hover {
-    background-color: #007f66;
+    background-color: #ff8272;
+}
+
+@media (max-width: 1068px) {
+    .heroContent {
+        padding: 0 1rem;
+    }
 }
