--- a/app/components/HowToSection.module.css
+++ b/app/components/HowToSection.module.css
@@ -13,6 +13,9 @@
   
   .textContainer {
     margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
   }
   
   .sectionTitle {
