--- a/app/components/MosqueDetailsPage.module.css
+++ b/app/components/MosqueDetailsPage.module.css
@@ -1,92 +1,258 @@
 .pageContainer {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  
-  .contentWrapper {
-    flex: 1;
-  }
-  
-  .hero {
-    background-image: url('https://images.pexels.com/photos/21937092/pexels-photo-21937092.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); /* Replace with your background image path */
-    background-size: cover;
-    background-position: center;
-    height: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: white;
-    position: relative;
-  }
-  
-  .heroContent {
-    background: rgba(0, 0, 0, 0.5); /* Add a semi-transparent background to enhance readability */
-    padding: 20px;
-    border-radius: 10px;
-  }
-  
-  .reviewButton {
-    display: block;
-    margin: 20px auto;
-    padding: 10px 20px;
-    background-color: #009879;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-    border-radius: 5px;
-  }
-  
-  .reviewsTitle {
-    text-align: center;
-    margin: 20px 0;
-    font-size: 24px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: #f9f9f9;
+}
+
+.contentWrapper {
+  flex: 1;
+  width: 100%;
+}
+
+.hero {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(155, 155, 155, 0.5)), url('../../public/mobile-home.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.heroContent {
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.mosqueName {
+  color: #FFF;
+  font-family: Almarai;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  text-transform: capitalize;
+}
+
+.mosqueAddress {
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: capitalize;
+}
+
+.reviewContentt {
+  padding: 100px;
+}
+
+.mosqueStar {
+  color: #EBA424;
+}
+
+.starr {
+  font-size: 20px;
+}
+
+.reviewButton {
+  padding: 10px 20px;
+  background-color: #CE503F;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  transition: background-color 0.3s ease;
+}
+
+.reviewButton:hover {
+  background-color: #fb8c7d;
+}
+
+.reviewButtonContainer {
+  padding-left: 50px;
+}
+
+.reviewsTitle {
+  font-size: 24px;
+  margin: 20px 0 0 50px;
+  color: black;
+}
+
+.reviewsContainer {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 50px;
+}
+
+.reviewCard {
+  background-color: #fff;
+  color: black;
+  padding: 20px;
+  width: 385px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.imagesContainer {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.reviewImage {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.reviewContent {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  border-top: 2px solid rgb(195, 192, 192);
+  margin-bottom: 40px;
+  gap: 10px;
+}
+
+.questionsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.question {
+  background-color: #CE503F;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 20px;
+}
+
+.date {
+  color: #949393;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  max-width: 800px;
+  padding: 20px;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  outline: none;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.modalContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.modalTitle {
+  font-size: 24px;
+  margin-bottom: 20px;
+  color: black;
+}
+
+.modalText {
+  font-size: 16px;
+  margin-bottom: 20px;
+  text-align: center;
+  color: black;
+}
+
+.modalButtonContainer {
+  display: flex;
+  gap: 10px;
+}
+
+.modalButton {
+  padding: 10px 20px;
+  margin: 5px;
+  background-color: #CE503F;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.closeButton {
+  align-self: flex-end;
+  font-size: 30px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: black;
+}
+
+.noReviews {
+  color: black;
+}
+
+.modalButton:hover {
+  background-color: #fb8c7d;
+}
+
+.deleteButton {
+  padding: 5px 10px;
+  background-color: red;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.dateAndDelete {
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 1268px) {
   .reviewsContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    padding: 20px;
-  }
-  
-  .reviewCard {
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 15px;
-    width: 300px;
-    color: black;
-    display: flex;
     flex-direction: column;
-    justify-content: space-between;
   }
-  
-  .imagesContainer {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    margin-top: 10px;
+  .reviewCard {
+    width: unset;
   }
-  
-  .reviewImage {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    border-radius: 5px;
-  }
-  
-  .reviewCard button {
-    background-color: red;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    cursor: pointer;
-    border-radius: 5px;
-    margin-top: 10px;
-    align-self: center;
-  }
-  
+}
