--- a/app/components/Navbar.module.css
+++ b/app/components/Navbar.module.css
@@ -39,7 +39,7 @@
 }
 
 .navLinks a {
-    color: white;
+    color: rgb(255, 255, 255);
     text-decoration: none;
 }
 
@@ -105,17 +105,34 @@
         position: absolute;
         top: 60px;
         left: 0;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         right: 0;
-        background-color: #333;
+        background-color: rgb(255, 255, 255);
         padding: 1rem;
     }
+    
+    .register {
+        border: 1px solid #CE503F;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
+    .homeLink::before {
+       display: none;
+      }
+      
+      .homeLink:hover::before {
+       display: none;
+      }
+
+  
+      
 
     .navLinks.open {
         display: flex;
-        align-items: flex-end;
     }
 
     .navLinks a, .navLinks button {
-        padding: 0.5rem 0;
+        padding: 0.5rem 15px;
+        color: black;
     }
 }
