--- a/app/auth/login/Login.module.css
+++ b/app/auth/login/Login.module.css
@@ -4,8 +4,8 @@
    
     justify-content: center;
     min-height: 100vh;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(155, 155, 155, 0.5)), url('../../../public/14.jpg');
-    background-size: cover;
+    /* background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(155, 155, 155, 0.5)), url('../../../public/14.jpg');
+    background-size: cover; */
     
 }
 
@@ -13,7 +13,7 @@
     display: flex;
     max-width: 1000px;
     width: 100%;
-    background: white;
+    background: #eceef0;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     overflow: hidden;
@@ -23,7 +23,7 @@
 
 .imageSection {
     flex: 1;
-    background: url('../../../public/signuppage.jpg') no-repeat center center;
+    background: url('../../../public/login-one.jpeg') no-repeat center center;
     background-size: cover;
 }
 
@@ -91,5 +91,6 @@
 @media (max-width: 768px) {
     .loginContainer {
        margin: 0 10px;
+       flex-direction: column;
     }
 }
