--- a/app/components/SearchForm.module.css
+++ b/app/components/SearchForm.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   min-height: 100vh;
   background-color: #ffffff;
-  overflow: hidden; /* To ensure the scaling effect doesn't cause scrollbars */
+  overflow: hidden;
 }
 
 .welcome {
@@ -14,7 +14,7 @@
 .searchFormContainer {
   width: 100%;
   height: 80vh;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(155, 155, 155, 0.5)), url('../../public/search-page-img.jpg');
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(155, 155, 155, 0.5)), url('../../public/search-hero.jpg');
   background-size: cover;
   background-position: center;
   display: flex;
@@ -23,10 +23,19 @@
   justify-content: center;
 }
 
+.searchFormContainer h1 {
+  text-transform: capitalize;
+  color: white;
+  margin-bottom: 20px;
+}
+
 .searchForm {
   display: flex;
   align-items: center;
-  padding: 20px;
+  
+  /* width: 100%; */
+  max-width: 800px;
+  padding: 0 20px; /* Padding to avoid overflow on mobile */
 }
 
 .input {
@@ -37,15 +46,18 @@
   background-color: rgb(246, 246, 246);
   border: 1px solid #ccc;
   border-right: none;
-  width: 500px;
+  width: 500px; /* Full width */
+  /* max-width: 00px; */
   color: black;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-weight: 500;
+  box-sizing: border-box; /* Ensure padding and width are handled correctly */
 }
 
 .suggestionsContainer {
-  width: 500px;
-  background-color: #fff;
+  width: 100%;
+  max-width: 500px;
+  background-color: rgb(255, 255, 255);
   position: absolute;
   z-index: 1000;
   overflow-y: auto;
@@ -71,6 +83,7 @@
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s ease;
+  width: 150px;
 }
 
 .searchButton:hover {
@@ -105,22 +118,18 @@
 
 .mosqueName {
   color: #000;
-font-family: Montserrat;
-font-size: 20px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-text-transform: capitalize;
+  font-family: Montserrat, sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: capitalize;
 }
 
 .address {
   color: #000;
-font-family: Montserrat;
-font-size: 13px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
-text-transform: capitalize;
+  font-family: Montserrat, sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  text-transform: capitalize;
 }
 
 .mosqueImage {
@@ -132,9 +141,9 @@ text-transform: capitalize;
 .cardContent {
   padding: 25px;
   display: flex;
-    flex-direction: column;
-    gap: 12px;
-    text-align: left;
+  flex-direction: column;
+  gap: 12px;
+  text-align: left;
 }
 
 .detailsButton {
@@ -158,17 +167,37 @@ text-transform: capitalize;
 }
 
 @media (max-width: 768px) {
+  .searchFormContainer {
+    height: auto; /* Adjust height for mobile */
+    padding: 80px 20px;
+  }
+
   .searchForm {
     flex-direction: column;
+    align-items: stretch; /* Ensure full width */
+    width: 100%; /* Full width */
+  }
+  .searchFormContainer h1 {
+   font-size: 20px;
   }
 
   .input {
+    width: 100%; /* Full width on mobile */
     border-radius: 20px 20px 0 0;
     border-right: 1px solid #ccc;
   }
 
+  .suggestionsContainer {
+    max-width: 300px;
+  }
+
+
   .searchButton {
     border-radius: 0 0 20px 20px;
-    width: 100%;
+    width: 100%; /* Full width on mobile */
+  }
+
+  .mosqueCards {
+    padding: 1rem; /* Adjust padding for mobile */
   }
 }
