--- a/app/components/Solution.module.css
+++ b/app/components/Solution.module.css
@@ -9,6 +9,7 @@
 
   .accessbilityTitle {
       color: black;
+      text-transform: capitalize;
   }
   
   .question {
@@ -62,15 +63,18 @@
   }
   
   .text {
-    font-size: 14px;
+    font-size: 20px;
+    font-weight: 500;
     font-family: Montserrat;
     /* margin-top: 10px; */
+   text-transform: capitalize;
   }
   
-  @media (max-width: 768px) {
+  @media (max-width: 968px) {
     .container {
       flex-direction: column;
       align-items: center;
+      padding: 40px 20px;
     }
   
     .tiles {
@@ -80,6 +84,12 @@
     .question h1 {
       font-size: 28px;
       text-align: center;
+    }
+
+    .text {
+      font-size: 18px;
+      line-height: 30px;
+      font-weight: 500;
     }
   }
   
